// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ConnectorSetting Should render ConnectorSetting - disable built in SM and save settings. 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--margin-top-small StyledProps--margin-bottom-small"
  >
    <label
      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkboxBuiltInSm StyledProps--main"
    >
      <input
        data-testid="checkBox-disable-builtInSM"
        type="checkbox"
      />
      <span
        class="bp3-control-indicator"
      />
      <div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--color StyledProps--color-grey900"
        >
          common.accountSetting.connector.disableBISMHeading
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
        >
          common.accountSetting.connector.disableBISMSubHeading
        </p>
      </div>
    </label>
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--padding-none Button--with-current-color Button--variation Button--variation-primary"
      data-testid="apply-connector-setting"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.apply
      </span>
    </button>
  </div>
</div>
`;

exports[`Test ConnectorSetting Should render ConnectorSetting - disable built in SM and save settings. 2`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--margin-top-small StyledProps--margin-bottom-small"
  >
    <label
      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkboxBuiltInSm StyledProps--main"
    >
      <input
        data-testid="checkBox-disable-builtInSM"
        type="checkbox"
      />
      <span
        class="bp3-control-indicator"
      />
      <div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--color StyledProps--color-grey900"
        >
          common.accountSetting.connector.disableBISMHeading
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
        >
          common.accountSetting.connector.disableBISMSubHeading
        </p>
      </div>
    </label>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--padding-none Button--with-current-color Button--variation Button--variation-primary"
      data-testid="apply-connector-setting"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.apply
      </span>
    </button>
  </div>
</div>
`;

exports[`Test ConnectorSetting Should render ConnectorSetting initial load - BuiltInSM:disabled(checked) and have less than two SM configured. 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--margin-top-small StyledProps--margin-bottom-small"
  >
    <label
      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkboxBuiltInSm StyledProps--main"
    >
      <input
        checked=""
        data-testid="checkBox-disable-builtInSM"
        type="checkbox"
      />
      <span
        class="bp3-control-indicator"
      />
      <div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--color StyledProps--color-grey900"
        >
          common.accountSetting.connector.disableBISMHeading
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
        >
          common.accountSetting.connector.disableBISMSubHeading
        </p>
      </div>
    </label>
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--padding-none Button--with-current-color Button--variation Button--variation-primary"
      data-testid="apply-connector-setting"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.apply
      </span>
    </button>
  </div>
</div>
`;

exports[`Test ConnectorSetting Should render ConnectorSetting initial load - BuiltInSM:enabled(unchecked) and have less than two SM configured. 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--margin-top-small StyledProps--margin-bottom-small"
  >
    <label
      class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox checkboxBuiltInSm StyledProps--main"
    >
      <input
        data-testid="checkBox-disable-builtInSM"
        disabled=""
        type="checkbox"
      />
      <span
        class="bp3-control-indicator"
      />
      <div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--color StyledProps--color-grey900"
        >
          common.accountSetting.connector.disableBISMHeading
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
        >
          common.accountSetting.connector.disableBISMSubHeading
        </p>
      </div>
    </label>
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--padding-none Button--with-current-color Button--variation Button--variation-primary"
      data-testid="apply-connector-setting"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.apply
      </span>
    </button>
  </div>
</div>
`;
